@@ -41,6 +41,7 @@ ev_prepare_start
 ev_prepare_stop
 ev_recommended_backends
 ev_ref
+ev_resume
 ev_set_allocator
 ev_set_io_collect_interval
 ev_set_syserr_cb
@@ -52,6 +53,7 @@ ev_stat_start
 ev_stat_stat
 ev_stat_stop
 ev_supported_backends
+ev_suspend
 ev_time
 ev_timer_again
 ev_timer_start
